unpackaged/main/default/objects/Carte_Grise__c/Carte_Grise__c.object-meta.xml
<CustomObject>
    <label>Carte Grise</label>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>Numéro de Carte Grise</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cartes Grises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>