unpackaged/main/default/objects/Carte_Grise__c/fields/Charge_Utile__c.field-meta.xml
<CustomField>
    <fullName>Charge_Utile__c</fullName>
    <label>Charge utile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>