unpackaged/main/default/objects/Carte_Grise__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cartes Grises</relationshipLabel>
    <relationshipName>Cartes_Grises</relationshipName>
    <type>Lookup</type>
</CustomField>