unpackaged/main/default/objects/Carte_Grise__c/fields/Date_1er_MEC__c.field-meta.xml
<CustomField>
    <fullName>Date_1er_MEC__c</fullName>
    <label>Date 1ère MEC</label>
    <type>Date</type>
</CustomField>