unpackaged/main/default/objects/Carte_Grise__c/fields/Date_Certificat__c.field-meta.xml
<CustomField>
    <fullName>Date_Certificat__c</fullName>
    <label>Date certificat</label>
    <type>Date</type>
</CustomField>