unpackaged/main/default/objects/Carte_Grise__c/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <label>Département</label>
    <length>50</length>
    <type>Text</type>
</CustomField>