unpackaged/main/default/objects/Carte_Grise__c/fields/Duplicata__c.field-meta.xml
<CustomField>
    <fullName>Duplicata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicata</label>
    <type>Checkbox</type>
</CustomField>