unpackaged/main/default/objects/Carte_Grise__c/fields/Empattement__c.field-meta.xml
<CustomField>
    <fullName>Empattement__c</fullName>
    <label>Empattement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>