unpackaged/main/default/objects/Carte_Grise__c/fields/Entite_PF__c.field-meta.xml
<CustomField>
    <fullName>Entite_PF__c</fullName>
    <label>Entité PF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>