unpackaged/main/default/objects/Carte_Grise__c/fields/Immat__c.field-meta.xml
<CustomField>
    <fullName>Immat__c</fullName>
    <label>Immatriculation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>