unpackaged/main/default/objects/Carte_Grise__c/fields/Montant_CG2__c.field-meta.xml
<CustomField>
    <fullName>Montant_CG2__c</fullName>
    <label>Montant CG2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>