unpackaged/main/default/objects/Carte_Grise__c/fields/PAV__c.field-meta.xml
<CustomField>
    <fullName>PAV__c</fullName>
    <label>PAV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>