unpackaged/main/default/objects/Carte_Grise__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <length>50</length>
    <type>Text</type>
</CustomField>