unpackaged/main/default/objects/Carte_Grise__c/fields/Poids_Telma__c.field-meta.xml
<CustomField>
    <fullName>Poids_Telma__c</fullName>
    <label>Poids Telma</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>