unpackaged/main/default/objects/Carte_Grise__c/fields/PTC__c.field-meta.xml
<CustomField>
    <fullName>PTC__c</fullName>
    <label>PTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>