unpackaged/main/default/objects/Carte_Grise__c/fields/Puissance__c.field-meta.xml
<CustomField>
    <fullName>Puissance__c</fullName>
    <label>Puissance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>