unpackaged/main/default/objects/Carte_Grise__c/fields/Taux_Emission__c.field-meta.xml
<CustomField>
    <fullName>Taux_Emission__c</fullName>
    <label>Taux émission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>